--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -1,7 +1,10 @@
 .main-footer {
     background-color: #313131;
     border-top: 2px solid black;
-    text-align: center; 
-    margin-top: auto;
+    width: 100vw;
     color: aliceblue;
+}
+
+h6 {
+    margin: 0;
 }
